Связь frontend и backend, корректировки личного кабинета и главной страницы
